# jeong981011food-api

./: Dockerfile  pyproject.toml
data/n20/: food.csv
src/cp_api/: main.py
src/cp_api/code/data/: food.csv
